Fixed an issue where the content wasn't visible on mobile

--- a/Passliss Web/passliss/styles/globals.css
+++ b/Passliss Web/passliss/styles/globals.css
@@ -50,3 +50,9 @@ body {
 .h-scroll {
   height: var(--content-h);
 }
+
+@media (min-width: 768px) {
+  .md\:h-scroll {
+    height: var(--content-h);
+  }
+}
